--- a/domoticz.yaml
+++ b/domoticz.yaml
@@ -18,15 +18,74 @@
         domoticz_src: domoticz # The name of the untarred Domoticz directory
         domoticz_user: domoticz # The user which the Domoticz daemon runs as
         domoticz_group: domoticz # The group which the Domoticz daemon runs as
-        domoticz_port: 8888 # The port for Domoticz to run http (-www daemon option). For ports <1024 root privileges are required, better to setup a reverse proxy with for example Nginx
+        #domoticz_port: 8888 # The port for Domoticz to run http (-www daemon option). For ports <1024 root privileges are required, better to setup a reverse proxy with for example Nginx
         domoticz_https: true # Enable/Disable https for Domoticz
-        domoticz_https_port: 443 # The port for Domoticz to run https (-sslwww daemon option). For ports <1024 root privileges are required, better to setup a reverse proxy with for example Nginx
+        #domoticz_https_port: 443 # The port for Domoticz to run https (-sslwww daemon option). For ports <1024 root privileges are required, better to setup a reverse proxy with for example Nginx
         domoticz_ssl_cert: "{{ domoticz_download_dir }}/{{ domoticz_src }}/server_cert.pem" # Path to SSL certificate, if left default the server_cert.pem from Domoticz will be used (-sslcert daemon option)
         domoticz_zwave_support: true # Add support for ZWave
         zwave_version: master # The version of Open-ZWave to be installed (accepts same arguments as version parameter of git module)
         zwave_url: https://github.com/OpenZWave/open-zwave.git # The Open-ZWave git url
       when: "'domoticz.service' not in services"
 
+    - name: Add domoticz user to dialout and tty group
+      command: usermod -a -G dialout,tty domoticz
+
+    - name: Enable logging for domoticz
+      lineinfile: 
+        dest: /lib/systemd/system/domoticz.service
+        state: present 
+        regexp: "^    ExecStart="
+        line: "    ExecStart=/home/domoticz/domoticz/domoticz -www {{ domoticz_port }} -sslwww {{ domoticz_https_port }} -log /var/log/domoticz.log"
+      notify:
+        - Restart domoticz
+        
+    - name: Create domoticz log file
+      file:
+        path: /var/log/domoticz.log
+        state: touch
+        mode: '0777'
+
+    - name: Copy logrotate for domoticz
+      copy:
+         src: logrotate-domoticz
+         dest: /etc/logrotate.d/domoticz
+
+    - name: Install Dashticz
+      ansible.builtin.unarchive:
+        src: https://github.com/Dashticz/dashticz/archive/refs/tags/v3.1.2.zip
+        dest: /var/www/html/
+        remote_src: yes
+
+    - name: Delete dashticz directory
+      file:
+        state: absent
+        path: /var/www/html/dashticz
+
+    - name: Rename dashticz folder
+      command: mv /var/www/html/dashticz-3.1.2 /var/www/html/dashticz
+
+    - name: Set Dashticz configuration
+      template:
+        src: CONFIG.js.j2
+        dest: /var/www/html/dashticz/custom/CONFIG.js
+        owner: root
+        group: root
+        mode: 0644
+
+    - name: Copy root index.html
+      copy:
+         src: index.html
+         dest: /var/www/html/
+
+    - name: Copy dashticz/index.html
+      copy:
+         src: dashticz/index.html
+         dest: /var/www/html/dashticz
+
+    - name: Copy dashticz/custom.css
+      copy:
+         src: dashticz/custom.css
+         dest: /var/www/html/dashticz/custom
 
     - name: Install RPI monitoring
       ansible.builtin.git:
@@ -34,6 +93,29 @@
         dest: /home/domoticz/domoticz/plugins/PiMonitor
       notify:
         - Restart domoticz
+
+    - name: Set permissions on PiMonitor
+      file:
+        path: /home/domoticz/domoticz/plugins/PiMonitor
+        state: directory
+        owner: domoticz
+        group: domoticz
+        recurse: yes
+
+    - name: Install WLED plugin
+      ansible.builtin.git:
+        repo: https://github.com/frustreermeneer/domoticz-wled-plugin.git
+        dest: /home/domoticz/domoticz/plugins/wled
+      notify:
+        - Restart domoticz
+
+    - name: Set permissions on wled
+      file:
+        path: /home/domoticz/domoticz/plugins/wled
+        state: directory
+        owner: domoticz
+        group: domoticz
+        recurse: yes
 
   handlers:
     - name: Restart domoticz
@@ -92,4 +174,49 @@
         enabled: yes
         name: nodered.service
 
+- hosts: rpi
+  become: yes
+  gather_facts: false
+  tasks:
+    - name: Clone MySensors
+      ansible.builtin.git:
+        repo: https://github.com/mysensors/MySensors.git
+        dest: /home/domoticz/MySensors
+        version: 2.3.2
+      tags:
+        - build_mysensors
 
+    - name: Configure MySensors
+      command: './configure --my-gateway=serial --my-serial-is-pty --my-serial-groupname=dialout --my-serial-port=/dev/ttyUSBMySensorsGateway --spi-spidev-device=/dev/spidev0.1 --my-debug=enable --my-transport=rf24 --my-rf24-pa-level=RF24_PA_LOW --my-rf24-irq-pin=18 --my-leds-err-pin=12 --my-leds-rx-pin=16 --my-leds-tx-pin=11'
+      args:
+        chdir: /home/domoticz/MySensors/
+      tags:
+        - build_mysensors
+
+    - name: Make MySensors
+      command: make
+      args:
+        chdir: /home/domoticz/MySensors/
+      tags:
+        - build_mysensors
+
+    - name: Make install MySensors
+      command: make install
+      args:
+        chdir: /home/domoticz/MySensors/
+      tags:
+        - build_mysensors
+
+    - name: Copy /etc/mysensors.conf
+      copy:
+         src: mysensors.conf
+         dest: /etc/mysensors.conf
+
+    - name: Restart MySensors service
+      ansible.builtin.systemd:
+        state: restarted
+        daemon_reload: yes
+        enabled: yes
+        name: mysgw.service
+      tags:
+        - build_mysensors
