--- a/files/emoncms.conf
+++ b/files/emoncms.conf
@@ -11,7 +11,7 @@
     <Directory /var/www/html>
         Options FollowSymLinks
         AllowOverride All
-        DirectoryIndex index.php
+        DirectoryIndex index.php index.html
         Order allow,deny
         Allow from all
     </Directory>
