--- a/domoticz.yaml
+++ b/domoticz.yaml
@@ -72,11 +72,6 @@
         group: root
         mode: 0644
 
-    - name: Copy root index.html
-      copy:
-         src: index.html
-         dest: /var/www/html/
-
     - name: Copy dashticz/index.html
       copy:
          src: dashticz/index.html
@@ -125,98 +120,4 @@
         enabled: yes
         name: domoticz.service
 
-- hosts: rpi
-  become: no
-  gather_facts: false
-  tasks:
-    - name: Print service domoticz.service
-      debug:
-        var: ansible_facts.services['nodered.service']
-
-    - name: Download node-red script
-      get_url: 
-        url: https://raw.githubusercontent.com/node-red/linux-installers/master/deb/update-nodejs-and-nodered
-        dest: /tmp/update-nodejs-and-nodered
-        validate_certs: false
-      when: "'nodered.service' not in services"
-      notify:
-        - Restart node-red
-
-    - name: Set permissions on node-red script
-      file:
-        path: /tmp/update-nodejs-and-nodered
-        state: touch
-        mode: +x
-      when: "'nodered.service' not in services"
-      notify:
-        - Restart node-red
-
-    - name: Install node-red
-      command: /tmp/update-nodejs-and-nodered --confirm-install --confirm-pi
-      ignore_errors: yes
-      when: "'nodered.service' not in services"
-      notify:
-        - Restart node-red
-
-    - name: Copy flows.json
-      copy:
-         src: flows.json
-         dest: /home/pi/.node-red/flows.json
-      notify:
-        - Restart node-red
- 
-  handlers:
-    - name: Restart node-red
-      become: yes
-      ansible.builtin.systemd:
-        state: restarted
-        daemon_reload: yes
-        enabled: yes
-        name: nodered.service
-
-- hosts: rpi
-  become: yes
-  gather_facts: false
-  tasks:
-    - name: Clone MySensors
-      ansible.builtin.git:
-        repo: https://github.com/mysensors/MySensors.git
-        dest: /home/domoticz/MySensors
-        version: 2.3.2
-      tags:
-        - build_mysensors
-
-    - name: Configure MySensors
-      command: './configure --my-gateway=serial --my-serial-is-pty --my-serial-groupname=dialout --my-serial-port=/dev/ttyUSBMySensorsGateway --spi-spidev-device=/dev/spidev0.1 --my-debug=enable --my-transport=rf24 --my-rf24-pa-level=RF24_PA_LOW --my-rf24-irq-pin=18 --my-leds-err-pin=12 --my-leds-rx-pin=16 --my-leds-tx-pin=11'
-      args:
-        chdir: /home/domoticz/MySensors/
-      tags:
-        - build_mysensors
-
-    - name: Make MySensors
-      command: make
-      args:
-        chdir: /home/domoticz/MySensors/
-      tags:
-        - build_mysensors
-
-    - name: Make install MySensors
-      command: make install
-      args:
-        chdir: /home/domoticz/MySensors/
-      tags:
-        - build_mysensors
-
-    - name: Copy /etc/mysensors.conf
-      copy:
-         src: mysensors.conf
-         dest: /etc/mysensors.conf
-
-    - name: Restart MySensors service
-      ansible.builtin.systemd:
-        state: restarted
-        daemon_reload: yes
-        enabled: yes
-        name: mysgw.service
-      tags:
-        - build_mysensors
+#################################### END #######################################
